--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8082
-MONGODB_URL=mongodb://127.0.0.1:27017/imageapp
+MONGODB_URL=mongodb+srv://Shounak:mongo@99@cluster0.g6aii.mongodb.net/imageapp?retryWrites=true&w=majority
 CHOKIDAR_USEPOLLING = true;
