--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejsbyte1",
+  "name": "Xmeme",
   "version": "1.0.0",
-  "description": "NodeJS first Byte",
+  "description": "Xmeme Backend",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
