--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8082
-MONGODB_URL=mongodb+srv://Shounak:mongo@99@cluster0.g6aii.mongodb.net/imageapp?retryWrites=true&w=majority
+MONGODB_URL=mongodb://Shounak:mongo@cluster0-shard-00-00.g6aii.mongodb.net:27017,cluster0-shard-00-01.g6aii.mongodb.net:27017,cluster0-shard-00-02.g6aii.mongodb.net:27017/imageapp?ssl=true&replicaSet=atlas-oumpcm-shard-0&authSource=admin&retryWrites=true&w=majority
 CHOKIDAR_USEPOLLING = true;
